--- a/MvcCoreMultiplesBBDD/appsettings.json
+++ b/MvcCoreMultiplesBBDD/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SqlHospital": "Data Source=LOCALHOST\\DESARROLLO;Initial Catalog=HOSPITAL;Persist Security Info=True;User ID=SA;Password=MCSD2023;TrustServerCertificate=True;",
+    "OracleHospital": "Data Source=localhost:1521/XE;User Id=SYSTEM; Password=oracle;Persist Security Info=True"
+
+  }
 }
